--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,30 +13,37 @@ jobs:
       - uses: actions/checkout@v4
 
       # 1) Build image and load it locally
-      - uses: docker/build-push-action@v6
+      - name: Build (load for verification)
+        uses: docker/build-push-action@v6
         with:
           context: .
           load: true
           tags: ${{ env.IMAGE }}:verify
 
-      # 2) Run container so the verifier can reach http://localhost:80
-      - run: |
+      # 2) Start container and publish container:8080 on host:80
+      - name: Start container on port 80
+        run: |
           docker run -d --rm --name app -p 80:8080 ${{ env.IMAGE }}:verify
-          for i in {1..20}; do curl -fsS http://localhost/ && break || sleep 1; done
+          # wait until the app responds on http://localhost/ (port 80)
+          for i in {1..30}; do curl -fsS http://localhost/ && break || sleep 1; done
 
-      # 3) Verify (this is the step from the screenshot)
-      - uses: liatrio/github-actions/apprentice-action@master
+      # 3) Run Liatrio's verifier (defaults to port 80)
+      - name: Apprentice verification
+        uses: liatrio/github-actions/apprentice-action@master
 
-      - if: always()
+      - name: Stop container
+        if: always()
         run: docker rm -f app
 
-      # 4) Log in and push uniquely tagged images
-      - uses: docker/login-action@v3
+      # 4) Push to Docker Hub with unique tags
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - uses: docker/build-push-action@v6
+      - name: Build and push (latest + unique)
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
