--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,16 +20,38 @@ jobs:
           load: true
           tags: ${{ env.IMAGE }}:verify
 
-      # 2) Start container and publish container:8080 on host:80
+      # 2) Start container and publish host:80 -> container:8080
       - name: Start container on port 80
         run: |
+          set -euo pipefail
           docker run -d --rm --name app -p 80:8080 ${{ env.IMAGE }}:verify
           # wait until the app responds on http://localhost/ (port 80)
-          for i in {1..30}; do curl -fsS http://localhost/ && break || sleep 1; done
+          for i in {1..30}; do
+            if curl -fsS http://localhost/ >/dev/null; then
+              echo "App is up on port 80"
+              break
+            fi
+            sleep 1
+          done
+          # assert it really is up (fails the step if not)
+          curl -fsS http://localhost/ >/dev/null
 
-      # 3) Run Liatrio's verifier (defaults to port 80)
+      # 3) Verify (explicitly tell it to use port 80)
       - name: Apprentice verification
         uses: liatrio/github-actions/apprentice-action@master
+        with:
+          port: 80
+
+      # Print helpful info only if the verification fails
+      - name: Debug on failure
+        if: failure()
+        run: |
+          echo "----- docker ps -----"
+          docker ps -a || true
+          echo "----- container logs -----"
+          docker logs app || true
+          echo "----- curl localhost (raw) -----"
+          curl -v http://localhost/ || true
 
       - name: Stop container
         if: always()
