--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # 1) Build image and load it locally for verification
+      # 1) Build the image and load it locally so we can run tests against it
       - name: Build (load for verification)
         uses: docker/build-push-action@v6
         with:
@@ -20,26 +20,25 @@ jobs:
           load: true
           tags: ${{ env.IMAGE }}:verify
 
-      # 2) Start container and wait until it's serving on host:80
+      # 2) Run the container and expose app port 8080 on host port 80 (the verifier expects :80)
       - name: Start container on port 80
         run: |
           set -euo pipefail
           docker run -d --rm --name app -p 80:8080 ${{ env.IMAGE }}:verify
-          for i in {1..30}; do
-            curl -fsS http://localhost/ >/dev/null && break || sleep 1
-          done
-          # assert it's up
+          # wait until the app is up
+          for i in {1..30}; do curl -fsS http://localhost/ >/dev/null && break || sleep 1; done
+          # assert it's reachable
           curl -fsS http://localhost/ >/dev/null
 
-      # (Optional but helpful) Show exactly what the verifier will see
+      # (Optional) Show what the verifier will see
       - name: Show raw JSON on port 80
         run: |
           echo "---- RAW response ----"
           curl -s http://localhost/ ; echo
 
-      # 3) Verify with Liatrio's action (defaults to port 80)
+      # 3) Verify using a known-good commit of the Liatrio action (before the broken minified test)
       - name: Apprentice verification
-        uses: liatrio/github-actions/apprentice-action@master
+        uses: liatrio/github-actions/apprentice-action@0b41561
 
       - name: Stop container
         if: always()
